--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css">
     <title>Joy Admin</title>
   </head>
   <body>
